--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f274968af28>"
+       "<folium.map.Marker at 0x7fc5f6f2cf28>"
       ]
      },
      "execution_count": 9,
