--- a/index.ipynb
+++ b/index.ipynb
@@ -487,7 +487,7 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f274961d198>"
+       "<folium.map.Marker at 0x7fc5f6ec7278>"
       ]
      },
      "execution_count": 17,
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
